# 3d_Viewer_Experiment

./: .gitignore  .gitmodules  Cargo.toml  README.md
assets/meshes/: cube.mesh  pyramid.mesh
assets/shaders/: frag.glsl  vert.glsl
src/: main.rs  miscs.rs
src/engine/: components.rs  gui.rs  mod.rs
src/engine/prime/: mod.rs
src/engine/system/: drawing.rs  events.rs  mod.rs  responses.rs
